--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,6 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <!-- <item name="android:statusBarColor">@color/blue</item> -->
+        <item name="android:windowBackground">@color/blue</item>
     </style>
 
 </resources>
